[package]
name = "order-flow-engine"
version = "0.1.0"
edition = "2021"
description = "Depthwalk order-book replay and market-order matching engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.126"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
